Update to use newest angualr2 version. Working app skeleton.

--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,10 @@ paket-files/
 /NeuroN/jspm_packages
 /NeuroN/bower_components
 /NeuronApi
+/NeuroN/npm-debug.log.996412132
+/NeuroN/npm-debug.log.928793931
+/NeuroN/npm-debug.log.917830561
+/NeuroN/npm-debug.log.3715369496
+/NeuroN/npm-debug.log.2845406125
+/NeuroN/npm-debug.log.1674981873
+/NeuroN/npm-debug.log.1084699718
