--- a/NeuroN/package.json
+++ b/NeuroN/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "product-management",
+    "name": "neuron",
     "version": "1.0.0",
     "author": "Neurosoft",
-    "description": "Package for the Acme Product Management sample application",
+    "description": "Framework for angular 2 apps.",
     "scripts": {
         "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
         "tsc": "tsc",
@@ -13,19 +13,42 @@
     },
     "license": "ISC",
     "dependencies": {
-        "angular2": "2.0.0-beta.15",
-        "systemjs": "0.19.26",
-        "es6-shim": "^0.35.0",
-        "reflect-metadata": "0.1.2",
-        "rxjs": "5.0.0-beta.2",
-        "zone.js": "0.6.10",
-        "bootstrap": "^3.3.6"
+        "@angular/common": "2.0.0-rc.5",
+        "@angular/compiler": "2.0.0-rc.5",
+        "@angular/core": "2.0.0-rc.5",
+        "@angular/forms": "0.3.0",
+        "@angular/http": "2.0.0-rc.5",
+        "@angular/platform-browser": "2.0.0-rc.5",
+        "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+        "@angular/router": "3.0.0-rc.1",
+        "@angular/router-deprecated": "2.0.0-rc.2",
+        "@angular/upgrade": "2.0.0-rc.5",
+
+        "systemjs": "0.19.27",
+        "core-js": "^2.4.0",
+        "reflect-metadata": "^0.1.3",
+        "rxjs": "5.0.0-beta.6",
+        "zone.js": "^0.6.12",
+
+        "bootstrap": "^3.3.6",
+        "angular2-in-memory-web-api": "0.0.15",
+
+        "es6-shim": "0.35.1",
+
+        "ng2-datepicker": "0.8.1" 
     },
     "devDependencies": {
         "concurrently": "^2.0.0",
         "lite-server": "^2.2.0",
         "typescript": "^1.8.10",
-        "typings": "^0.7.12"
+        "typings": "^1.0.4",
+
+        "gulp": "^3.9.1",
+        "gulp-typescript": "2.13.6",
+        "gulp-concat": "^2.6.0",
+        "gulp-sass": "^2.3.2",
+        "gulp-uglify": "^1.5.4",
+        "ng2-bootstrap": "^1.0.16" 
     },
     "repository": {}
 }
