--- a/NeuroN/package.json
+++ b/NeuroN/package.json
@@ -35,8 +35,9 @@
 
         "es6-shim": "0.35.1",
 
-        "ng2-datepicker": "0.8.1" 
+        "ng2-bootstrap": "^1.0.24"
     },
+
     "devDependencies": {
         "concurrently": "^2.0.0",
         "lite-server": "^2.2.0",
@@ -47,8 +48,8 @@
         "gulp-typescript": "2.13.6",
         "gulp-concat": "^2.6.0",
         "gulp-sass": "^2.3.2",
-        "gulp-uglify": "^1.5.4",
-        "ng2-bootstrap": "^1.0.16" 
+        "gulp-uglify": "^1.5.4"
+
     },
     "repository": {}
 }
