Added blogging module Fixed todo module Updated to newest angular

--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,15 @@ paket-files/
 /NeuroN/npm-debug.log.2845406125
 /NeuroN/npm-debug.log.1674981873
 /NeuroN/npm-debug.log.1084699718
+/NeuroN/npm-debug.log.3916174471
+/NeuroN/npm-debug.log.3809468992
+/NeuroN/npm-debug.log.2903522402
+/NeuroN/npm-debug.log.2509906672
+/NeuroN/npm-debug.log.2481205707
+/NeuroN/npm-debug.log.2278033692
+/NeuroN/npm-debug.log.2227179907
+/NeuroN/npm-debug.log.2033797450
+/NeuroN/npm-debug.log.1727907385
+/NeuroN/npm-debug.log.1719034266
+/NeuroN/npm-debug.log.149406054
+/NeuroN/npm-debug.log.1090078525
