--- a/NeuroN/package.json
+++ b/NeuroN/package.json
@@ -13,43 +13,39 @@
     },
     "license": "ISC",
     "dependencies": {
-        "@angular/common": "2.0.0-rc.5",
-        "@angular/compiler": "2.0.0-rc.5",
-        "@angular/core": "2.0.0-rc.5",
-        "@angular/forms": "0.3.0",
-        "@angular/http": "2.0.0-rc.5",
-        "@angular/platform-browser": "2.0.0-rc.5",
-        "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-        "@angular/router": "3.0.0-rc.1",
+        "@angular/common": "2.0.0-rc.6",
+        "@angular/compiler": "2.0.0-rc.6",
+        "@angular/core": "2.0.0-rc.6",
+        "@angular/forms": "2.0.0-rc.6",
+        "@angular/http": "2.0.0-rc.6",
+        "@angular/platform-browser": "2.0.0-rc.6",
+        "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+        "@angular/router": "3.0.0-rc.2",
         "@angular/router-deprecated": "2.0.0-rc.2",
-        "@angular/upgrade": "2.0.0-rc.5",
-
-        "systemjs": "0.19.27",
-        "core-js": "^2.4.0",
-        "reflect-metadata": "^0.1.3",
-        "rxjs": "5.0.0-beta.6",
-        "zone.js": "^0.6.12",
-
+        "@angular/upgrade": "2.0.0-rc.6",
+        "angular2-in-memory-web-api": "0.0.18",
         "bootstrap": "^3.3.6",
-        "angular2-in-memory-web-api": "0.0.15",
-
+        "core-js": "^2.4.1",
         "es6-shim": "0.35.1",
-
-        "ng2-bootstrap": "^1.0.24"
+        "lodash": "^4.15.0",
+        "moment": "^2.13.0",
+        "ng2-bootstrap": "^1.1.1",
+        "ng2-datetime": "^1.1.4",
+        "reflect-metadata": "^0.1.3",
+        "rxjs": "5.0.0-beta.11",
+        "systemjs": "0.19.27",
+        "zone.js": "^0.6.17"
     },
-
     "devDependencies": {
-        "concurrently": "^2.0.0",
-        "lite-server": "^2.2.0",
+        "concurrently": "^2.2.0",
+        "lite-server": "^2.2.2",
         "typescript": "^1.8.10",
-        "typings": "^1.0.4",
-
+        "typings": "^1.3.2",
         "gulp": "^3.9.1",
         "gulp-typescript": "2.13.6",
         "gulp-concat": "^2.6.0",
         "gulp-sass": "^2.3.2",
         "gulp-uglify": "^1.5.4"
-
     },
     "repository": {}
 }
