Updated project structure Added blog posts controller, model and repo Implemented CRUD for blog posts

--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,7 @@ paket-files/
 /NeuroN/npm-debug.log.1719034266
 /NeuroN/npm-debug.log.149406054
 /NeuroN/npm-debug.log.1090078525
+/NeuroN/npm-debug.log.3989332292
+/NeuroN/npm-debug.log.2074607101
+/NeuroN/npm-debug.log.1961898483
+/NeuroN/npm-debug.log.1831787560
