--- a/NeuroN/NeuroN.csproj
+++ b/NeuroN/NeuroN.csproj
@@ -70,20 +70,20 @@
   <ItemGroup>
     <Content Include="app\app.component.html" />
     <Content Include="app\avatar\avatar.component.html" />
-    <Content Include="app\blog\edit-blog-entry.component.html" />
+    <Content Include="app\blog\edit-blog-entry\edit-blog-entry.component.html" />
     <Content Include="app\main.js" />
     <Content Include="app\shared\menu\menu-item.component.css" />
     <Content Include="app\shared\menu\menu-item.component.html" />
     <Content Include="app\shared\menu\menu.component.css" />
     <Content Include="app\shared\menu\menu.component.html" />
-    <Content Include="app\blog\blog-entry-list.component.css" />
-    <Content Include="app\blog\blog-entry-list.component.html" />
+    <Content Include="app\blog\blog-entry-list\blog-entry-list.component.css" />
+    <Content Include="app\blog\blog-entry-list\blog-entry-list.component.html" />
     <Content Include="app\blog\blog.component.html" />
-    <Content Include="app\tasks\task-details.component.html" />
-    <Content Include="app\tasks\edit-task.component.html" />
-    <Content Include="app\tasks\edit-task.component.css" />
-    <Content Include="app\tasks\task-list.component.css" />
-    <Content Include="app\tasks\task-list.component.html" />
+    <Content Include="app\tasks\task-details\task-details.component.html" />
+    <Content Include="app\tasks\edit-task\edit-task.component.html" />
+    <Content Include="app\tasks\edit-task\edit-task.component.css" />
+    <Content Include="app\tasks\task-list\task-list.component.css" />
+    <Content Include="app\tasks\task-list\task-list.component.html" />
     <Content Include="app\tasks\todo-page.component.html" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
@@ -129,7 +129,7 @@
     <TypeScriptCompile Include="app\app.routing.ts" />
     <TypeScriptCompile Include="app\app.providers.ts" />
     <TypeScriptCompile Include="app\avatar\avatar.component.ts" />
-    <TypeScriptCompile Include="app\blog\edit-blog-entry.component.ts" />
+    <TypeScriptCompile Include="app\blog\edit-blog-entry\edit-blog-entry.component.ts" />
     <TypeScriptCompile Include="app\home\welcome.component.ts" />
     <TypeScriptCompile Include="app\main.ts" />
     <TypeScriptCompile Include="app\shared\interfaces.ts" />
@@ -140,16 +140,16 @@
     <TypeScriptCompile Include="app\shared\services\blog.service.ts" />
     <TypeScriptCompile Include="app\shared\star.component.ts" />
     <TypeScriptCompile Include="app\shared\utilities\items.service.ts" />
-    <TypeScriptCompile Include="app\blog\blog-entry-list.component.ts" />
-    <TypeScriptCompile Include="app\blog\blog.service.ts" />
-    <TypeScriptCompile Include="app\blog\blog-entry.ts" />
+    <TypeScriptCompile Include="app\blog\blog-entry-list\blog-entry-list.component.ts" />
+    <TypeScriptCompile Include="app\blog\shared\blog.service.ts" />
+    <TypeScriptCompile Include="app\blog\shared\blog-entry.ts" />
     <TypeScriptCompile Include="app\blog\blog.component.ts" />
-    <TypeScriptCompile Include="app\tasks\edit-task.component.ts" />
-    <TypeScriptCompile Include="app\tasks\task-details.component.ts" />
-    <TypeScriptCompile Include="app\tasks\task-filter.pipe.ts" />
-    <TypeScriptCompile Include="app\tasks\task-list.component.ts" />
-    <TypeScriptCompile Include="app\tasks\task.service.ts" />
-    <TypeScriptCompile Include="app\tasks\task.ts" />
+    <TypeScriptCompile Include="app\tasks\edit-task\edit-task.component.ts" />
+    <TypeScriptCompile Include="app\tasks\task-details\task-details.component.ts" />
+    <TypeScriptCompile Include="app\tasks\shared\task-filter.pipe.ts" />
+    <TypeScriptCompile Include="app\tasks\task-list\task-list.component.ts" />
+    <TypeScriptCompile Include="app\tasks\shared\task.service.ts" />
+    <TypeScriptCompile Include="app\tasks\shared\task.ts" />
     <TypeScriptCompile Include="app\tasks\todo-page.component.ts" />
     <TypeScriptCompile Include="app\utilities\apiHelper.service.ts" />
     <TypeScriptCompile Include="app\utilities\asObservable.ts" />
