--- a/ApiNeuron/project.json
+++ b/ApiNeuron/project.json
@@ -5,6 +5,7 @@
         "Microsoft.AspNetCore.Server.Kestrel": "1.0.0",
         "Microsoft.EntityFrameworkCore": "1.0.0",
         "Microsoft.EntityFrameworkCore.SqlServer": "1.0.0",
+        "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
         "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
         "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
         "Microsoft.Extensions.Configuration.Json": "1.0.0",
@@ -12,35 +13,35 @@
         "Microsoft.Extensions.Logging.Console": "1.0.0",
         "Microsoft.Extensions.Logging.Debug": "1.0.0",
         "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
-        "Microsoft.EntityFrameworkCore.Design":  "1.0.0-preview2-final",
-        "Microsoft.AspNetCore.Cors": "1.0.0" 
+        "Microsoft.EntityFrameworkCore.Design": "1.0.0-preview2-final",
+        "Microsoft.AspNetCore.Cors": "1.0.0"
     },
-
+    
     "tools": {
         "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
         "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
     },
 
-  "frameworks": {
-    "net461": { }
-  },
+    "frameworks": {
+        "net461": {}
+    },
 
-  "buildOptions": {
-    "emitEntryPoint": true,
-    "preserveCompilationContext": true
-  },
+    "buildOptions": {
+        "emitEntryPoint": true,
+        "preserveCompilationContext": true
+    },
 
-  "publishOptions": {
-    "include": [
-      "wwwroot",
-      "Views",
-      "Areas/**/Views",
-      "appsettings.json",
-      "web.config"
-    ]
-  },
+    "publishOptions": {
+        "include": [
+            "wwwroot",
+            "Views",
+            "Areas/**/Views",
+            "appsettings.json",
+            "web.config"
+        ]
+    },
 
-  "scripts": {
-    "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
-  }
+    "scripts": {
+        "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
+    }
 }
