--- a/NeuroN/NeuroN.csproj
+++ b/NeuroN/NeuroN.csproj
@@ -115,8 +115,8 @@
     <Content Include="app\assets\images\logo.jpg" />
     <Content Include="app\home\welcome.component.html" />
     <Content Include="app\home\welcome.component.js" />
-    <Content Include="app\shared\star.component.css" />
-    <Content Include="app\shared\star.component.html" />
+    <Content Include="app\shared\star\star.component.css" />
+    <Content Include="app\shared\star\star.component.html" />
     <Content Include="index.html" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -129,16 +129,16 @@
     <TypeScriptCompile Include="app\app.routing.ts" />
     <TypeScriptCompile Include="app\app.providers.ts" />
     <TypeScriptCompile Include="app\avatar\avatar.component.ts" />
+    <TypeScriptCompile Include="app\avatar\shared\avatar.ts" />
+    <TypeScriptCompile Include="app\avatar\shared\avatar.service.ts" />
     <TypeScriptCompile Include="app\blog\edit-blog-entry\edit-blog-entry.component.ts" />
     <TypeScriptCompile Include="app\home\welcome.component.ts" />
     <TypeScriptCompile Include="app\main.ts" />
-    <TypeScriptCompile Include="app\shared\interfaces.ts" />
     <TypeScriptCompile Include="app\shared\menu\menu-item.component.ts" />
     <TypeScriptCompile Include="app\shared\menu\menu.component.ts" />
     <TypeScriptCompile Include="app\shared\utilities\emitter.service.ts" />
     <TypeScriptCompile Include="app\shared\utilities\config.service.ts" />
-    <TypeScriptCompile Include="app\shared\services\blog.service.ts" />
-    <TypeScriptCompile Include="app\shared\star.component.ts" />
+    <TypeScriptCompile Include="app\shared\star\star.component.ts" />
     <TypeScriptCompile Include="app\shared\utilities\items.service.ts" />
     <TypeScriptCompile Include="app\blog\blog-entry-list\blog-entry-list.component.ts" />
     <TypeScriptCompile Include="app\blog\shared\blog.service.ts" />
@@ -152,16 +152,13 @@
     <TypeScriptCompile Include="app\tasks\shared\task.ts" />
     <TypeScriptCompile Include="app\tasks\todo-page.component.ts" />
     <TypeScriptCompile Include="app\utilities\apiHelper.service.ts" />
-    <TypeScriptCompile Include="app\utilities\asObservable.ts" />
     <TypeScriptCompile Include="app\rxjs-operators.ts" />
     <TypeScriptCompile Include="typings\browser\ambient\es6-shim\index.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="app\services\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
