--- a/ApiNeuron/project.json
+++ b/ApiNeuron/project.json
@@ -1,4 +1,6 @@
 {
+    "userSecretsId": "Neuron-User-Secrets",
+
     "dependencies": {
         "Microsoft.AspNetCore.Mvc": "1.0.0",
         "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
@@ -14,12 +16,14 @@
         "Microsoft.Extensions.Logging.Debug": "1.0.0",
         "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
         "Microsoft.EntityFrameworkCore.Design": "1.0.0-preview2-final",
-        "Microsoft.AspNetCore.Cors": "1.0.0"
+        "Microsoft.AspNetCore.Cors": "1.0.0",
+        "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0" 
     },
-    
+
     "tools": {
         "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final",
-        "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
+        "Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final",
+        "Microsoft.Extensions.SecretManager.Tools": "1.0.0-preview2-final"
     },
 
     "frameworks": {
