--- a/NeuroN/package.json
+++ b/NeuroN/package.json
@@ -23,7 +23,7 @@
         "@angular/router": "~3.0.1",
         "@angular/router-deprecated": "2.0.0-rc.2",
         "@angular/upgrade": "~2.0.1",
-        "angular2-in-memory-web-api": "~0.1.1",
+        "angular-in-memory-web-api": "0.1.3",
         "bootstrap": "^3.3.7",
         "core-js": "^2.4.1",
         "es6-shim": "0.35.1",
