--- a/NeuroN/tsconfig.json
+++ b/NeuroN/tsconfig.json
@@ -8,11 +8,13 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false
+   // "outFile": "bundle.js"
   },
   "compileOnSave": true,
   "exclude": [
     "node_modules",
     "typings/main",
-    "typings/main.d.ts"
+    "typings/main.d.ts",
+    "typings"
   ]
 }
