--- a/NeuroN/package.json
+++ b/NeuroN/package.json
@@ -4,7 +4,8 @@
     "author": "Neurosoft",
     "description": "Framework for angular 2 apps.",
     "scripts": {
-        "start": "concurrently \"npm run tsc:w\" \"npm run lite\" ",
+        
+        "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
         "tsc": "tsc",
         "tsc:w": "tsc -w",
         "lite": "lite-server",
